# cdlml

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  ci.yml  pypi_release.yml  release.yml
csrc/: cdlml.c  cdlml.h  cdlml_server.c
simple/: index.html
simple/cdlml/: index.html
src/_cdlml/: __init__.py  _cdlml.c
src/cdlml/: __init__.py
tests/: Dockerfile  Makefile  README.md  conftest.py  test_universal.py
tests/malloc_test/: bar.c  foo.c
tests/test_arbitrary_args/: Makefile  conftest.py  test_types.py  types_lib.c
tests/test_array_access/: Makefile  array_lib.c  conftest.py  test_array.py
tests/test_compat/: Makefile  compat_lib.c  conftest.py  test_ctypes_compat.py
tests/test_preload/: Makefile  conftest.py  malloc.c  test_universal.py
