[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "cdlml"
version = "0.1.0"
description = "Linux based ctypes.CDLL extension that enables per-instance LD_PRELOAD-like behavior for shared libraries."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [{ name = "Kamil Burkiewicz" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: Linux",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff.lint.per-file-ignores]
"src/cdlml/__init__.py" = ["PLC2701"]

